infra/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-challenge
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: taskforge
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
