infra/k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: devops-challenge
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: taskforge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: worker
    app.kubernetes.io/component: worker
  ports:
    - name: http
      port: 80
      targetPort: http
