infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskforge-ingress
  namespace: devops-challenge
  labels:
    app.kubernetes.io/name: taskforge-ingress
    app.kubernetes.io/part-of: taskforge
spec:
  rules:
    - host: taskforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
